cmake_minimum_required(VERSION 3.8)

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED_ON)
# enable_testing()
add_subdirectory(public/src)

# add_subdirectory(adhagat/ps2/bounce)
# add_subdirectory(adhagat/ps2/cannonball)

# add_subdirectory(adhagat/ps3/flythrough)
# add_subdirectory(adhagat/ps3/orbit)

# add_subdirectory(adhagat/ps4/hashutil)
# add_subdirectory(adhagat/ps4/simplebitmap)
# add_subdirectory(adhagat/ps4/ps4_1)
# add_subdirectory(adhagat/ps4/ps4_2)

# add_subdirectory(adhagat/ps5/ps5_1)
# add_subdirectory(adhagat/ps5/ps5_2)
# add_subdirectory(adhagat/ps5/ps5_3)
# add_subdirectory(adhagat/ps5/bintreeutil)

add_subdirectory(adhagat/ps6/ps6_1)
add_subdirectory(adhagat/ps6/ps6_2)
add_subdirectory(adhagat/ps6/polygonalmesh)
add_subdirectory(adhagat/ps6/naca)